--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Type: Package
 Title: Tools for working with points and intervals
 Author: Richard Bourgon <bourgon.richard@gene.com>
 Maintainer: Edzer Pebesma <edzer.pebesma@uni-muenster.de>
-Depends: R (>= 2.9.0), methods
-Suggests:
+Depends: R (>= 2.9.0)
+Imports: methods
 Description: Tools for working with and comparing sets of points and intervals.
 License: Artistic-2.0
 LazyLoad: yes
