--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: intervals
 Version: 0.15.0
 Date: 2014-09-19
 Type: Package
-Title: Tools for working with points and intervals
+Title: Tools for Working with Points and Intervals
 Author: Richard Bourgon <bourgon.richard@gene.com>
 Maintainer: Edzer Pebesma <edzer.pebesma@uni-muenster.de>
 Depends: R (>= 2.9.0)
@@ -11,7 +11,4 @@ Description: Tools for working with and comparing sets of points and intervals.
 License: Artistic-2.0
 LazyLoad: yes
 URL: http://github.com/edzer/intervals
-Packaged: 2013-11-03 17:10:26 UTC; hornik
 NeedsCompilation: yes
-Repository: CRAN
-Date/Publication: 2013-11-03 18:23:55
