--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Title: Tools for Working with Points and Intervals
 Author: Richard Bourgon <bourgon.richard@gene.com>
 Maintainer: Edzer Pebesma <edzer.pebesma@uni-muenster.de>
 Depends: R (>= 2.9.0)
-Imports: methods
+Imports: utils, graphics, methods
 Description: Tools for working with and comparing sets of points and intervals.
 License: Artistic-2.0
 LazyLoad: yes
