make check pass on r-devel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ useDynLib( "intervals" )
 import("methods")
 
 importFrom( "utils", "head", "tail" )
-importFrom( "graphics", "par", "points", "text", "axis" )
+importFrom( "graphics", "par", "points", "text", "axis", "segments" )
 
 ######## Exports
 
