--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,5 @@
 Package: intervals
-Version: 0.15.2
-Date: 2015-12-13
+Version: 0.15.3
 Type: Package
 Title: Tools for Working with Points and Intervals
 Author: Richard Bourgon <bourgon.richard@gene.com>
@@ -10,5 +9,5 @@ Imports: utils, graphics, methods
 Description: Tools for working with and comparing sets of points and intervals.
 License: Artistic-2.0
 LazyLoad: yes
-URL: http://github.com/edzer/intervals
+URL: https://github.com/edzer/intervals
 NeedsCompilation: yes
