--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,15 @@
 Package: intervals
-Version: 0.15.4
+Version: 0.15.5
 Type: Package
 Title: Tools for Working with Points and Intervals
-Author: Richard Bourgon <bourgon.richard@gene.com>
-Maintainer: Edzer Pebesma <edzer.pebesma@uni-muenster.de>
+Authors@R: c(person(given = "Richard",
+                    family = "Bourgon",
+                    role = "aut",
+                    email = "bourgon.richard@gene.com"),
+             person(given = "Edzer",
+                    family = "Pebesma",
+                    role = "cre",
+                    email = "edzer.pebesma@uni-muenster.de"))
 Depends: R (>= 2.9.0)
 Imports: utils, graphics, methods
 Description: Tools for working with and comparing sets of points and intervals.
